--- a/lingo.html
+++ b/lingo.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="nl">
 
-<html lang="nl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel ="stylesheet" href="lingo.css">
-   <title>LINGO</title>
+    <title>LINGO</title>
 </head>
 <body>
     
